[package]
name = "core-video-sys"
version = "0.1.4"
authors = ["luozijun <luozijun.assistant@gmail.com>", "michael.laifx <cihv2@163.com>"]
description = "Bindings to CoreVideo.framework for macOS and iOS"
license = "MIT"
homepage   = "https://github.com/luozijun/rust-core-video-sys"
repository = "https://github.com/luozijun/rust-core-video-sys"
documentation = "https://docs.rs/core-video-sys/*/x86_64-apple-darwin/core-video-sys"
edition = "2018"

[dependencies]
cfg-if = "0.1"
libc = "0.2"
objc = "0.2"
core-foundation-sys = "0.7"

[dependencies.metal]
version = "0.18"
features = ["private"]
optional = true

[dependencies.core-graphics]
version = "0.19"
optional = true

[features]
default = [ "display_link", "metal" ]
all = [ "display_link", "direct3d", "io_suface", "opengl" ]

display_link = [ "opengl", "core-graphics" ]
direct3d  = [ ]
io_suface = [ ]
opengl    = [ ]

